# clang-plugin-examples

./: .clang-format  .editorconfig  AUTHORS  Readme.md  meson.build  meson_options.txt
add-braces/: Readme.md  meson.build
add-braces/src/: Plugin.cpp
add-braces/test/: do-empty.cpp  do-single.cpp  else-empty.cpp  else-single.cpp  for-empty.cpp  for-single.cpp  if-empty.cpp  if-single.cpp  ladder-empty.cpp  ladder-single.cpp  while-empty.cpp  while-single.cpp
ast-ir-match/: Readme.md  meson.build
ast-ir-match/src/: AstIrContext.cpp  AstIrContext.h  FunctionSourceLocPass.cpp  Plugin.cpp  Singleton.cpp  Singleton.h
attributes/: Readme.md  meson.build
attributes/src/: AttrContext.cpp  AttrContext.h  Consumer.cpp  Consumer.h  DeclAttr.cpp  DeclAttr.h  Plugin.cpp  Plugin.h  Register.cpp  Singleton.cpp  Singleton.h  StmtAttr.cpp  StmtAttr.h  Visitor.cpp  Visitor.h
attributes/test/: attrs-err.cpp  attrs-gnu.cpp  attrs-pragma.cpp  attrs.c  attrs.cpp
common/: Config.h.in  config.h.in  meson.build
docs/: notes.md
instrument-2/: Readme.md  meson.build
instrument-2/src/: Clause.cpp  Clause.h  Consumer.cpp  Consumer.h  Directive.cpp  Directive.h  Handler.cpp  Handler.h  Instr.h  InstrContext.cpp  InstrContext.h  Parser.cpp  Parser.h  Plugin.cpp  Visitor.cpp  Visitor.h
instrument-2/test/: empty-for.cpp  matmul.cpp  nested.cpp
loop-demarcator/: Readme.md  meson.build
loop-demarcator-2/: Readme.md  meson.build
loop-demarcator-2/src/: Consumer.cpp  Consumer.h  Handler.cpp  Handler.h  Plugin.cpp  Pragmas.h  Visitor.cpp  Visitor.h
loop-demarcator-2/test/: empty.cpp  nested.cpp
loop-demarcator-3/: Readme.md  meson.build
loop-demarcator-3/src/: Plugin.cpp  Visitor.cpp  Visitor.h
loop-demarcator-3/test/: .#matmul.cpp  loop1.c
loop-demarcator/src/: Consumer.cpp  Consumer.h  Handler.h  Plugin.cpp  Pragmas.cpp  Pragmas.h  Visitor.cpp  Visitor.h
loop-demarcator/test/: empty-for.cpp  nested.cpp
loop-extractor/: Readme.md  meson.build
loop-extractor/src/: Plugin.cpp
loop-extractor/test/: duplicate.cpp  empty.cpp  nothing.cpp  orphan.cpp
trace-consumer/: meson.build
trace-consumer/src/: Plugin.cpp
trace-consumer/test/: loop1.c  matmul.cpp
